added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -105,7 +105,7 @@ ip=[]
             down_new.splice(index, 1);
             //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already ENABLED</strong>" );
             $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
-            console.log(ssid.id+' already UP')}
+            console.log(ssid.id+' already UP'+ssidlist)}
 }
      else {
         if (ssidlist.includes(ssid.id)) {
@@ -116,7 +116,7 @@ ip=[]
             up_new.splice(index,1)
             //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already Disabled</strong>" );
             $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
-            console.log(ssid.id+ " already DOWN")}
+            console.log(ssid.id+ " already DOWN"+ssidlist)}
 
 
 
