added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -92,6 +92,7 @@ up_new=[];
 down_new=[];
 ip=[]
     function update_ssidlist(ssid) {
+        console.log(ssidlist)
     //$('span.'+ssid.id).animate({opacity: 1}, 700 );
     ip.push(ssid.name)
     if (ssid.checked) {
