--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -92,7 +92,7 @@ up_new=[];
 down_new=[];
 ip=[]
     function update_ssidlist(ssid) {
-        console.log(ssidlist)
+        console.log('UPDATE_SSID func started, ssidlist= '+ssidlist)
     //$('span.'+ssid.id).animate({opacity: 1}, 700 );
     ip.push(ssid.name)
     if (ssid.checked) {
@@ -106,7 +106,7 @@ ip=[]
             down_new.splice(index, 1);
             //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already ENABLED</strong>" );
             $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
-            console.log(ssid.id+' already UP'+ssidlist)}
+            console.log(ssid.id+' already UP '+ssidlist)}
 }
      else {
         if (ssidlist.includes(ssid.id)) {
@@ -117,8 +117,7 @@ ip=[]
             up_new.splice(index,1)
             //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already Disabled</strong>" );
             $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
-            console.log(ssid.id+ " already DOWN"+ssidlist)}
-
+            console.log(ssid.id+ " already DOWN "+ssidlist)}
 
 
     }
