--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -141,7 +141,7 @@ function run() {
 
         // handle a successful response
             success : function(json) {
-            console.log(json); // log the returned json to the console
+            //console.log(json); // log the returned json to the console
             ssidlist = Object.values(json);
              // another sanity check
             $("#loading").css('display','none');
@@ -153,7 +153,7 @@ function run() {
 
               //  $("#success").css('display','inline-block');
                 console.log("success");
-                console.log(ssidlist);
+                //console.log(ssidlist);
 
         },
 
