--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -144,6 +144,9 @@ function run() {
             success : function(json) {
             //console.log(json); // log the returned json to the console
             ssidlist = Object.values(json);
+            up_new=[]
+            down_new=[]
+            ip=[]
              // another sanity check
             $("#loading").css('display','none');
             $("input[name='ssid']" ).attr('disabled', false);
