added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -92,7 +92,7 @@ up_new=[];
 down_new=[];
 ip=[]
     function update_ssidlist(ssid) {
-        console.log('UPDATE_SSID func started, ssidlist= '+ssidlist)
+        console.log('UPDATE_SSID func started, ssidlist= '+ssidlist+'up_new='+up_new+'down_new= '+down_new)
     //$('span.'+ssid.id).animate({opacity: 1}, 700 );
     ip.push(ssid.name)
     if (ssid.checked) {
