added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -73,7 +73,7 @@
 
 
 <script language="JavaScript">
-
+console.log('Initial SSIDLIST: '+ssidlist)
 $(document).ready(function(){
  $('span').mouseenter(function(){
         $(this).fadeTo('fast', 0.5);
