--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -93,7 +93,7 @@ up_new=[];
 down_new=[];
 ip=[]
     function update_ssidlist(ssid) {
-        console.log('UPDATE_SSID func started, ssidlist= '+ssidlist+'up_new='+up_new+'down_new= '+down_new)
+        console.log('UPDATE_SSID func started, ssidlist= '+ssidlist+' SSID id='+ssid.id+' up_new='+up_new+' down_new= '+down_new)
     //$('span.'+ssid.id).animate({opacity: 1}, 700 );
     ip.push(ssid.name)
     if (ssid.checked) {
@@ -158,6 +158,7 @@ function run() {
 
               //  $("#success").css('display','inline-block');
                 console.log("success");
+                console.log('ajax SSID list='+ssidlist)
                 //console.log(ssidlist);
 
         },
