added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -85,7 +85,8 @@ $('span').mouseleave(function(){
 {% autoescape off %}
 ssidlist={{ all_up_ssids }}
 {% endautoescape %}
-console.log('Initial SSIDLIST='+ssidlist)
+console.log('Initial SSIDLIST='+ssidlist+'ssidlist[0]'+ssidlist[0]+'type of ssidlist[0]'+typeof ssidlist[0])
+
 //console.log(up_new)
 //console.log(down_new)
 //console.log("SSID LIST= "+ssidlist)
