--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -147,7 +147,7 @@ function run() {
             success : function(json) {
             //console.log(json); // log the returned json to the console
             //ssidlist = Object.values(json);
-            ssidlist=JSON.stringify(json)['all_up_ssids']
+            //ssidlist=JSON.stringify(json)['all_up_ssids']
                 up_new=[]
             down_new=[]
             ip=[]
@@ -161,7 +161,8 @@ function run() {
 
               //  $("#success").css('display','inline-block');
                 console.log("success");
-                console.log('ajax SSID list='+ssidlist+typeof ssidlist)
+                //console.log('ajax SSID list='+ssidlist+typeof ssidlist)
+                console.log(json);
                 //console.log(ssidlist);
 
         },
