--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -162,7 +162,7 @@ function run() {
               //  $("#success").css('display','inline-block');
                 console.log("success");
                 //console.log('ajax SSID list='+ssidlist+typeof ssidlist)
-                console.log(json.all_up_ssids.toString()+typeof json.all_up_ssids.toString());
+                console.log(json.all_up_ssids.toString()+typeof json.all_up_ssids.toString(),typeof JSON.stringify(json));
                 //console.log(ssidlist);
 
         },
