--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -162,9 +162,10 @@ function run() {
               //  $("#success").css('display','inline-block');
                 console.log("success");
                 //console.log('ajax SSID list='+ssidlist+typeof ssidlist)
-                console.log(json.all_up_ssids.toString()+typeof json.all_up_ssids.toString()+JSON.all_up_ssids.stringify(json)+typeof JSON.all_up_ssids.stringify(json));
+                //console.log(json.all_up_ssids.toString()+typeof json.all_up_ssids.toString()+JSON.all_up_ssids.stringify(json)+typeof JSON.all_up_ssids.stringify(json));
                 //console.log(ssidlist);
-
+                km=Object.values(json)
+               console.log(JSON.stringify(km),typeof JSON.stringify(km))
         },
 
         // handle a non-successful response
