--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -161,9 +161,10 @@ function run() {
 
               //  $("#success").css('display','inline-block');
                 console.log("success");
+                console.log(json)
                 //console.log('ajax SSID list='+ssidlist+typeof ssidlist)
                 //console.log(json.all_up_ssids.toString()+typeof json.all_up_ssids.toString()+JSON.all_up_ssids.stringify(json)+typeof JSON.all_up_ssids.stringify(json));
-                console.log(JSON.all_up_ssids.stringify(json)+typeof JSON.all_up_ssids.stringify(json));
+                //console.log(JSON.all_up_ssids.stringify(json)+typeof JSON.all_up_ssids.stringify(json));
                 //console.log(ssidlist);
         },
 
