--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -161,7 +161,7 @@ function run() {
 
               //  $("#success").css('display','inline-block');
                 console.log("success");
-                console.log(json)
+                console.log(JSON.stringify(json.all_up_ssids),typeof JSON.stringify(json.all_up_ssids))
                 //console.log('ajax SSID list='+ssidlist+typeof ssidlist)
                 //console.log(json.all_up_ssids.toString()+typeof json.all_up_ssids.toString()+JSON.all_up_ssids.stringify(json)+typeof JSON.all_up_ssids.stringify(json));
                 //console.log(JSON.all_up_ssids.stringify(json)+typeof JSON.all_up_ssids.stringify(json));
