added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -154,6 +154,7 @@ function run() {
             $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
             $("#Run").fadeIn("slow");//.fadeIn("slow").delay( 800 ).fadeOut("slow").fadeIn("slow").attr('value','Run');
             console.log("success");
+            console.log(json);
         },
 
         // handle a non-successful response
