--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -177,7 +177,8 @@ function run() {
                 data=JSON.stringify(data.ssid_status)
                 if (data[0] != null){
                    for(var i=0, n=data.length;i<n;i++) {
-                   $(data[i]).html("<span> ok  </span>");}}
+                   console.log(data[i])}}
+                       //$(data[i]).html("<span> ok  </span>");}}
                 else {console.log('Not ready')}
             });
  } , interval)
