added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -170,13 +170,13 @@ function run() {
     })
                setInterval( function(){
                $.get("/ssid_status/", function(data) {
-
+                 console.log('typeof received data'+typeof data)
                    // Замінюємо текст тегу з id="target" на отримані дані
                 data=JSON.stringify(data.ssid_status)
                 console.log('Jquery data='+data+'data length='+data.length+'data[0]='+data[0])
                 if (data.length > null){
                    for(var i=0, n=data.length;i<n;i++) {
-                   console.log('Data inside dor='+data[i])}}
+                   console.log('Data inside for='+data[i])}}
                        //$(data[i]).html("<span> ok  </span>");}}
                 else {console.log('Not ready')}
             });
