--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -147,8 +147,11 @@ function run() {
 
             success : function(json) {
             interval = null
-            $("#loading")
+            //$("#loading")
             ssidlist=JSON.stringify(json.all_up_ssids)
+            for (var i=0, n=ssidlist.length;i<n;i++) {
+                console.log('ssid list after succes'+ssidlist[i])
+            }
             up_new=[]
             down_new=[]
             all_new=[]
@@ -168,7 +171,7 @@ function run() {
             console.log(xhr.status + ": " + xhr.responseText); // provide a bit more info about the error to the console
         }
     })
-               setInterval( function(){
+             /*  setInterval( function(){
                $.get("/ssid_status/", function(data) {
                  console.log('typeof received data'+typeof data+'data element='+data.ssid_status)
                    // Замінюємо текст тегу з id="target" на отримані дані
@@ -180,7 +183,7 @@ function run() {
                        //$(data[i]).html("<span> ok  </span>");}}
                 else {console.log('Not ready')}
             });
- } , interval)
+ } , interval) */
                console.log('Next one1')}
 
 else {
