added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -183,8 +183,8 @@ function run() {
                 console.log('Jquery data='+data+'data length='+data.length+'data[0]='+data[0])
                 if (data.length > null){
                    for(var i=0, n=data.length;i<n;i++) {
-                   console.log('Data inside for='+data[i])}}
-                       //$(data[i]).html("<span> ok  </span>");}}
+                   //console.log('Data inside for='+data[i])}}
+                   $(data[i]).html("<span> ok  </span>");}}
                 else {console.log('Not ready')}
             });
  } , 1000)
