added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -184,7 +184,8 @@ function run() {
                 if (data.length > null){
                    for(var i=0, n=data.length;i<n;i++) {
                    //console.log('Data inside for='+data[i])}}
-                   $('#'+data[i]).html("<span> ok  </span>");}}
+                   //$('#'+data[i]).html("<span> ok  </span>");}}
+                    $( "#"+data[i] ).css( "color", "blue" );}}
                 else {console.log('Not ready')}
             });
  } , 1000)
