--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -176,16 +176,17 @@ function run() {
 
                check_status =  setInterval( function(){
                $.get("/ssid_status/", function(data) {
-                 console.log('typeof received data'+typeof data+'data element='+data.ssid_status)
+                 //console.log('typeof received data'+typeof data+'data element='+data.ssid_status)
                    // Замінюємо текст тегу з id="target" на отримані дані
                 //data=JSON.stringify(data.ssid_status)
                    data=data.ssid_status
-                console.log('Jquery data='+data+'data length='+data.length+'data[0]='+data[0])
+                //console.log('Jquery data='+data+'data length='+data.length+'data[0]='+data[0])
                 if (data.length > null){
                    for(var i=0, n=data.length;i<n;i++) {
-                   //console.log('Data inside for='+data[i])}}
+                   console.log(data[i]+' ready, changing span color')
+                       //console.log('Data inside for='+data[i])}}
                    //$('#'+data[i]).html("<span> ok  </span>");}}
-                   $( "#wcm_prod_cisco" ).css( "color", "blue" );}}
+                   $( "span.wcm_prod_cisco" ).css( "color", "blue" );}}
                 else {console.log('Not ready')}
             });
  } , 1000)
