added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -186,7 +186,8 @@ function run() {
                    console.log(data[i]+' ready, changing span color')
                        //console.log('Data inside for='+data[i])}}
                    //$('#'+data[i]).html("<span> ok  </span>");}}
-                   $( "span."+data[i] ).css( "color", "blue" );}}
+                   //$( "span."+data[i] ).css( "color", "blue" );}}
+                       $( "span."+data[i] ).html("<span style='color:green'> ok  </span>");}}
                 else {console.log('Not ready')}
             });
  } , 1000)
