added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -187,7 +187,7 @@ function run() {
                        //console.log('Data inside for='+data[i])}}
                    //$('#'+data[i]).html("<span> ok  </span>");}}
                    //$( "span."+data[i] ).css( "color", "blue" );}}
-                       $( "span."+data[i] ).html("<span style='color:green'> ok  </span>");}}
+                       $( "span."+data[i] ).append("<span style='color:green'> ok  </span>");}}
                 else {console.log('Not ready')}
             });
  } , 1000)
